--- a/README
+++ b/README
@@ -4,7 +4,10 @@ What I am hoping to create is CSS stylesheets that override the colors of
 embedded Gists. Primarily, I wish to 'translate' existing GtkSourceView (gedit)
 themes to the Gist embed.css stucture.
 
-Original themes can be found at:
+The stylesheet for Gists is here:
+https://gist.github.com/stylesheets/gist/embed.css
+
+and original gedit themes are here:
 http://live.gnome.org/GtkSourceView/StyleSchemes
 
 Any help is appreciated, as I learn how to use Github. :)
